examples/test/testpolicy19081.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19081
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key20: value21
      key31: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value47
          key3: value27
          key7: value49
      podSelector:
        matchLabels:
          key24: value44
